--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,8 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
+        <li><a href="{{site.baseurl}}/eventos/">Eventos</a></li>
         <li><a href="{{site.baseurl}}/sobre/">Sobre</a></li>
         <li><a href="{{site.baseurl}}/contacto/">Contacto</a></li>
 
